--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": "^7.3 || ^8.0",
         "ext-json": "*",
         "ext-dom": "*",
-        "fisharebest/webtrees": "^2.0.12 || dev-master",
+        "fisharebest/webtrees": "^2.0.12 || dev-main",
         "magicsunday/webtrees-module-installer-plugin": "^1.3"
     },
     "require-dev": {
