--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,4 +1,4 @@
-name: phpcs
+name: "phpcs"
 
 on: [push, pull_request]
 
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-20.04]
-        php-version: ['7.1', '7.2', '7.3', '7.4']
+        php-version: ['7.1', '7.4']
 
     name: Testing PHP ${{ matrix.php-version }} on ${{ matrix.operating-system }}
 
