--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,14 @@
     "require": {
         "ext-json": "*",
         "ext-dom": "*",
-        "fisharebest/webtrees": "~2.1.0",
+        "fisharebest/webtrees": "~2.2.0 || dev-main",
+        "magicsunday/webtrees-module-base": "^1.0",
         "magicsunday/webtrees-module-installer-plugin": "^1.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.63.2",
         "overtrue/phplint": "^3.4 || ^9.0",
-        "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
         "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "rector/rector": "^1.0"
@@ -48,21 +47,20 @@
             "MagicSunday\\Webtrees\\PedigreeChart\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "MagicSunday\\Webtrees\\PedigreeChart\\Test\\": "test/"
-        }
-    },
     "scripts": {
         "module:build": [
             "### Remove any left over files",
             "rm -Rf webtrees-pedigree-chart/",
             "### Checkout latest version of repository",
             "git archive --prefix=webtrees-pedigree-chart/ HEAD --format=tar | tar -x",
+            "### Install required components",
+            "@composer require magicsunday/webtrees-module-base:^1.0",
+            "### Copy base module to vendor directory",
+            "mkdir -p webtrees-pedigree-chart/vendor/magicsunday",
+            "cp -r .build/vendor/magicsunday/webtrees-module-base webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base",
             "### Remove all not required files from archive",
             "rm -rf webtrees-pedigree-chart/.github",
             "rm -rf webtrees-pedigree-chart/resources/js/modules",
-            "rm -rf webtrees-pedigree-chart/test",
             "rm -f webtrees-pedigree-chart/.gitattributes",
             "rm -f webtrees-pedigree-chart/.gitignore",
             "rm -f webtrees-pedigree-chart/composer.json",
@@ -70,7 +68,6 @@
             "rm -f webtrees-pedigree-chart/rollup.config.js",
             "rm -f webtrees-pedigree-chart/phpstan.neon",
             "rm -f webtrees-pedigree-chart/phpstan-baseline.neon",
-            "rm -f webtrees-pedigree-chart/phpunit.xml",
             "rm -f webtrees-pedigree-chart/.php-cs-fixer.dist.php",
             "rm -f webtrees-pedigree-chart/.phplint.yml",
             "rm -f webtrees-pedigree-chart/rector.php",
@@ -89,17 +86,13 @@
         "ci:test:php:rector": [
             "rector process --config rector.php --dry-run"
         ],
-        "ci:test:php:unit": [
-            "phpunit"
-        ],
         "ci:cgl": [
             "php-cs-fixer fix --diff --verbose"
         ],
         "ci:test": [
             "@ci:test:php:lint",
             "@ci:test:php:phpstan",
-            "@ci:test:php:rector",
-            "@ci:test:php:unit"
+            "@ci:test:php:rector"
         ],
         "module:check": [
             "@ci:test"
