--- a/composer.json
+++ b/composer.json
@@ -25,22 +25,20 @@
     "require": {
         "ext-json": "*",
         "ext-dom": "*",
-        "fisharebest/webtrees": "~2.1.0",
+        "fisharebest/webtrees": "~2.2.0 || dev-main",
+        "magicsunday/webtrees-module-base": "^1.0",
         "magicsunday/webtrees-module-installer-plugin": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
         "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-strict-rules": "^1.4",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
             "MagicSunday\\Webtrees\\PedigreeChart\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "MagicSunday\\Webtrees\\PedigreeChart\\Test\\": "test/"
         }
     },
     "scripts": {
@@ -49,17 +47,27 @@
             "rm -Rf webtrees-pedigree-chart/",
             "### Checkout latest version of repository",
             "git archive --prefix=webtrees-pedigree-chart/ HEAD --format=tar | tar -x",
+            "### Install required components",
+            "@composer require magicsunday/webtrees-module-base:^1.0",
+            "### Copy base module to vendor directory",
+            "mkdir -p webtrees-pedigree-chart/vendor/magicsunday",
+            "cp -r vendor/magicsunday/webtrees-module-base webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base",
             "### Remove all not required files from archive",
             "rm -rf webtrees-pedigree-chart/.github",
             "rm -rf webtrees-pedigree-chart/resources/js/modules",
-            "rm -rf webtrees-pedigree-chart/test",
             "rm -f webtrees-pedigree-chart/.gitattributes",
             "rm -f webtrees-pedigree-chart/.gitignore",
             "rm -f webtrees-pedigree-chart/composer.json",
             "rm -f webtrees-pedigree-chart/package.json",
             "rm -f webtrees-pedigree-chart/rollup.config.js",
             "rm -f webtrees-pedigree-chart/phpstan.neon",
-            "rm -f webtrees-pedigree-chart/phpunit.xml",
+            "### Clean vendor",
+            "rm -rf webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base/.github",
+            "rm -rf webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base/test",
+            "rm -f webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base/.gitignore",
+            "rm -f webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base/composer.json",
+            "rm -f webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base/phpstan.neon",
+            "rm -f webtrees-pedigree-chart/vendor/magicsunday/webtrees-module-base/phpunit.xml",
             "### Create archive",
             "zip --quiet --recurse-paths --move -9 webtrees-pedigree-chart.zip webtrees-pedigree-chart"
         ],
@@ -67,9 +75,7 @@
             "### PHP CodeSniffer",
             "@composer module:phpcs",
             "### PHPStan",
-            "@composer module:phpstan",
-            "### PHPUnit",
-            "@composer module:phpunit"
+            "@composer module:phpstan"
         ],
         "module:phpcs": [
             "@composer global require squizlabs/php_codesniffer=* --quiet",
@@ -82,11 +88,6 @@
             "@composer global require --quiet phpstan/phpstan-strict-rules=*",
             "@composer install --quiet",
             "~/.composer/vendor/bin/phpstan analyse --memory-limit=-1 -c phpstan.neon",
-            "@composer install --no-dev --quiet"
-        ],
-        "module:phpunit": [
-            "@composer install --quiet",
-            "@php vendor/bin/phpunit",
             "@composer install --no-dev --quiet"
         ]
     },
