--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webtrees-pedigree-chart",
-    "version": "1.5.0",
+    "version": "1.5.1-dev",
     "license": "GPL-3.0",
     "repository": {
         "type": "git",
