--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
     "name": "webtrees-pedigree-chart",
     "version": "1.6.1-dev",
-    "license": "GPL-3.0",
+    "description": "This modules provides an SVG pedigree chart for the [webtrees](https://www.webtrees.net) genealogy application.",
+    "keywords": [
+        "webtrees",
+        "module",
+        "pedigree",
+        "chart"
+    ],
+    "homepage": "https://github.com/magicsunday/webtrees-pedigree-chart",
+    "license": "GPL-3.0-or-later",
+    "author": "Rico Sonntag <mail@ricosonntag.de>",
     "repository": {
         "type": "git",
-        "url": "https://github.com/magicsunday/webtrees-pedigree-chart"
+        "url": "https://github.com/magicsunday/webtrees-pedigree-chart.git"
     },
-    "description": "",
     "scripts": {
         "prepare": "rollup --config rollup.config.js",
         "watch": "rollup --watch --config rollup.config.js"
