--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@rollup/plugin-node-resolve": "^13.0",
         "d3-fetch": "^3.0",
         "d3-hierarchy": "^3.0",
+        "d3-path": "^3.0",
         "d3-scale": "^4.0",
         "d3-selection": "^3.0",
         "d3-shape": "^3.0",
