--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "pedigree",
         "chart"
     ],
+    "type": "module",
     "homepage": "https://github.com/magicsunday/webtrees-pedigree-chart",
     "license": "GPL-3.0-or-later",
     "author": "Rico Sonntag <mail@ricosonntag.de>",
@@ -20,17 +21,14 @@
         "watch": "rollup --watch --config rollup.config.js"
     },
     "devDependencies": {
-        "@rollup/plugin-node-resolve": "^13.0",
-        "d3-fetch": "^3.0",
-        "d3-hierarchy": "^3.0",
-        "d3-path": "^3.0",
-        "d3-scale": "^4.0",
-        "d3-selection": "^3.0",
-        "d3-shape": "^3.0",
-        "d3-timer": "^3.0",
-        "d3-transition": "^3.0",
-        "d3-zoom": "^3.0",
-        "rollup": "^2.56",
-        "rollup-plugin-terser": "^7.0"
+        "@rollup/plugin-node-resolve": "^15.2.1",
+        "@rollup/plugin-terser": "^0.4.3",
+        "d3-fetch": "^3.0.1",
+        "d3-hierarchy": "^3.1.2",
+        "d3-path": "^3.1.0",
+        "d3-selection": "^3.0.0",
+        "d3-transition": "^3.0.1",
+        "d3-zoom": "^3.0.0",
+        "rollup": "^3.28.1"
     }
 }
