Add version info to minified file

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ node_modules/
 .phpunit.cache
 
 # Custom
-resources/js/pedigree-chart.js
+resources/js/pedigree-chart-*.js
 resources/js/pedigree-chart-storage.js
+# Allow minified file
+!resources/js/pedigree-chart-*.min.js
 webtrees-pedigree-chart.zip
