--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webtrees-pedigree-chart",
-    "version": "1.7.1",
+    "version": "1.7.2-dev",
     "description": "This modules provides an SVG pedigree chart for the [webtrees](https://www.webtrees.net) genealogy application.",
     "keywords": [
         "webtrees",
@@ -23,6 +23,7 @@
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
+        "rollup-plugin-license": "^3.5.2",
         "d3-fetch": "^3.0.1",
         "d3-hierarchy": "^3.1.2",
         "d3-path": "^3.1.0",
