--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "webtrees-pedigree-chart",
-    "version": "1.7.3-dev",
+    "version": "1.7.3",
     "description": "This modules provides an SVG pedigree chart for the [webtrees](https://www.webtrees.net) genealogy application.",
     "keywords": [
         "webtrees",
